--- a/packages/ibm-products/src/components/DecoratorLink/DecoratorLink.mdx
+++ b/packages/ibm-products/src/components/DecoratorLink/DecoratorLink.mdx
@@ -3,9 +3,9 @@ import {
   getStoryId,
   CodesandboxLink,
 } from '../../global/js/utils/story-helper';
-import { Decorator } from '.';
+import { DecoratorLink } from '.';
 
-# Decorator
+# DecoratorLink
 
 ## Table of Contents
 
@@ -15,13 +15,12 @@ import { Decorator } from '.';
 
 ## Overview
 
-The Decorator groups a key/value pair as a single element. This component is not
-interactive.
+The DecoratorLink groups a key/value pair to look and behave like a single link.
 
 ## Example usage
 
 <Canvas>
-  <Story id={getStoryId(Decorator.displayName, 'decorator')} />
+  <Story id={getStoryId(DecoratorLink.displayName, 'decoratorLink')} />
 </Canvas>
 
 ## Component API
