--- a/packages/ibm-products/src/components/DecoratorSingleButton/DecoratorSingleButton.mdx
+++ b/packages/ibm-products/src/components/DecoratorSingleButton/DecoratorSingleButton.mdx
@@ -3,9 +3,9 @@ import {
   getStoryId,
   CodesandboxLink,
 } from '../../global/js/utils/story-helper';
-import { Decorator } from '.';
+import { DecoratorSingleButton } from '.';
 
-# Decorator
+# DecoratorSingleButton
 
 ## Table of Contents
 
@@ -15,13 +15,15 @@ import { Decorator } from '.';
 
 ## Overview
 
-The Decorator groups a key/value pair as a single element. This component is not
-interactive.
+The DecoratorSingleButton groups a key/value pair to look and behave like a
+single button.
 
 ## Example usage
 
 <Canvas>
-  <Story id={getStoryId(Decorator.displayName, 'decorator')} />
+  <Story
+    id={getStoryId(DecoratorSingleButton.displayName, 'decoratorSingleButton')}
+  />
 </Canvas>
 
 ## Component API
