--- a/packages/ibm-products/src/components/BigNumbers/BigNumbers.mdx
+++ b/packages/ibm-products/src/components/BigNumbers/BigNumbers.mdx
@@ -4,6 +4,7 @@ import {
   CodesandboxLink,
 } from '../../global/js/utils/story-helper';
 import { BigNumbers } from '.';
+import * as BigNumbersStories from './BigNumbers.stories';
 
 # BigNumbers
 
@@ -32,13 +33,13 @@ of a button as well as tool tip functionality. The default locale is English
 ### Big numbers
 
 <Canvas>
-  <Story id={getStoryId(BigNumbers.displayName, 'big-numbers')} />
+  <Story of={BigNumbersStories.bigNumbers} />
 </Canvas>
 
 ### Big numbers with edit button
 
 <Canvas>
-  <Story id={getStoryId(BigNumbers.displayName, 'with-edit-button')} />
+  <Story of={BigNumbersStories.withEditButton} />
 </Canvas>
 
 ## Code sample
