--- a/packages/ibm-products/src/components/SearchBar/SearchBar.mdx
+++ b/packages/ibm-products/src/components/SearchBar/SearchBar.mdx
@@ -4,6 +4,7 @@ import {
   CodesandboxLink,
 } from '../../global/js/utils/story-helper';
 import { SearchBar } from '.';
+import * as SearchBarStories from './SearchBar.stories';
 
 # SearchBar
 
@@ -22,31 +23,31 @@ import { SearchBar } from '.';
 ### Default
 
 <Canvas>
-  <Story id={getStoryId(SearchBar.displayName, 'default')} />
+  <Story of={SearchBarStories.Default} />
 </Canvas>
 
 ### Initial Value
 
 <Canvas>
-  <Story id={getStoryId(SearchBar.displayName, 'initial-value')} />
+  <Story of={SearchBarStories.InitialValue} />
 </Canvas>
 
 ### Scopes
 
 <Canvas>
-  <Story id={getStoryId(SearchBar.displayName, 'scopes')} />
+  <Story of={SearchBarStories.Scopes} />
 </Canvas>
 
 ### Unsorted Scopes
 
 <Canvas>
-  <Story id={getStoryId(SearchBar.displayName, 'unsorted-scopes')} />
+  <Story of={SearchBarStories.UnsortedScopes} />
 </Canvas>
 
 ### Selected Scopes
 
 <Canvas>
-  <Story id={getStoryId(SearchBar.displayName, 'selected-scopes')} />
+  <Story of={SearchBarStories.SelectedScopes} />
 </Canvas>
 
 ## Code sample
