--- a/packages/ibm-products/src/components/StatusIndicator/StatusIndicator.mdx
+++ b/packages/ibm-products/src/components/StatusIndicator/StatusIndicator.mdx
@@ -4,6 +4,7 @@ import {
   CodesandboxLink,
 } from '../../global/js/utils/story-helper';
 import { StatusIndicator } from '.';
+import * as StatusIndicatorStories from './StatusIndicator.stories';
 
 # StatusIndicator
 
@@ -17,7 +18,7 @@ import { StatusIndicator } from '.';
 {/* TODO: One example per designed use case. */}
 
 <Canvas>
-  <Story id={getStoryId(StatusIndicator.displayName, 'status-indicator')} />
+  <Story of={StatusIndicatorStories.statusIndicator} />
 </Canvas>
 
 ## Component API
