--- a/packages/ibm-products/src/components/StringFormatter/StringFormatter.mdx
+++ b/packages/ibm-products/src/components/StringFormatter/StringFormatter.mdx
@@ -4,6 +4,7 @@ import {
   CodesandboxLink,
 } from '../../global/js/utils/story-helper';
 import { StringFormatter } from '.';
+import * as StringFormatterStories from './StringFormatter.stories';
 
 # StringFormatter
 
@@ -21,7 +22,7 @@ hover or focus with the entirety of the provided copy.
 ## Example usage
 
 <Canvas>
-  <Story id={getStoryId(StringFormatter.displayName, 'string-formatter')} />
+  <Story of={StringFormatterStories.stringFormatter} />
 </Canvas>
 
 ## Code sample
