--- a/packages/ibm-products/src/components/BigNumbers/BigNumbers.mdx
+++ b/packages/ibm-products/src/components/BigNumbers/BigNumbers.mdx
@@ -1,8 +1,5 @@
 import { Story, ArgsTable, Source, Canvas } from '@storybook/addon-docs';
-import {
-  getStoryId,
-  CodesandboxLink,
-} from '../../global/js/utils/story-helper';
+import { CodesandboxLink } from '../../global/js/utils/story-helper';
 import { BigNumbers } from '.';
 import * as BigNumbersStories from './BigNumbers.stories';
 
