--- a/packages/ibm-products/src/components/StringFormatter/StringFormatter.mdx
+++ b/packages/ibm-products/src/components/StringFormatter/StringFormatter.mdx
@@ -1,8 +1,5 @@
 import { Story, ArgsTable, Source, Canvas } from '@storybook/addon-docs';
-import {
-  getStoryId,
-  CodesandboxLink,
-} from '../../global/js/utils/story-helper';
+import { CodesandboxLink } from '../../global/js/utils/story-helper';
 import { StringFormatter } from '.';
 import * as StringFormatterStories from './StringFormatter.stories';
 
