--- a/packages/ibm-products/src/components/Coachmark/Coachmark.mdx
+++ b/packages/ibm-products/src/components/Coachmark/Coachmark.mdx
@@ -1,9 +1,7 @@
 import { Story, ArgsTable, Source, Canvas, Meta } from '@storybook/addon-docs';
-import {
-  getStoryId,
-  CodesandboxLink,
-} from '../../global/js/utils/story-helper';
+import { CodesandboxLink } from '../../global/js/utils/story-helper';
 import { Coachmark, CoachmarkFixed } from '..';
+import * as CoachmarkStories from './Coachmark.stories';
 
 <Meta title="Coachmark" component={Coachmark} />
 
@@ -51,7 +49,7 @@ to display properly within your usage.
 
 <Canvas className="coachmarkExample" withSource="none">
   <div className="CoachmarkBaseExampleUsage">
-    <Story id={getStoryId(Coachmark.displayName, 'tooltip')} />
+    <Story of={CoachmarkStories.tooltip} />
   </div>
 </Canvas>
 
@@ -75,7 +73,7 @@ to display properly within your usage.
 
 <Canvas className="coachmarkExample" withSource="none">
   <div className="CoachmarkBaseExampleUsage">
-    <Story id={getStoryId(Coachmark.displayName, 'floating')} />
+    <Story of={CoachmarkStories.floating} />
   </div>
 </Canvas>
 
