feat(tagoverflow): component functionality implementation

--- a/packages/ibm-products/src/components/TagOverflow/TagOverflow.mdx
+++ b/packages/ibm-products/src/components/TagOverflow/TagOverflow.mdx
@@ -20,14 +20,33 @@ import { TagOverflow } from '.';
 ## Example usage
 
 {/* TODO: One example per designed use case. */}
+### Tags
 
 <Canvas>
-  <Story id={getStoryId(TagOverflow.displayName, 'tag-overflow')} />
+  <Story id={getStoryId(TagOverflow.displayName, 'many-tags')} />
+</Canvas>
+
+### Tags with truncation
+
+<Canvas>
+  <Story id={getStoryId(TagOverflow.displayName, 'tags-with-truncation')} />
+</Canvas>
+
+### UserAvatars
+
+<Canvas>
+  <Story id={getStoryId(TagOverflow.displayName, 'many-user-avatars')} />
+</Canvas>
+
+### Custom components
+
+<Canvas>
+  <Story id={getStoryId(TagOverflow.displayName, 'custom-component')} />
 </Canvas>
 
 ## Code sample
 
-{/* <CodesandboxLink exampleDirectory="TagOverflow" /> */}
+<CodesandboxLink exampleDirectory="TagOverflow" />
 
 ## Component API
 
