--- a/packages/ibm-products/src/components/CoachmarkBeacon/CoachmarkBeacon.mdx
+++ b/packages/ibm-products/src/components/CoachmarkBeacon/CoachmarkBeacon.mdx
@@ -1,9 +1,7 @@
 import { Story, ArgsTable, Source, Canvas } from '@storybook/addon-docs';
-import {
-  getStoryId,
-  CodesandboxLink,
-} from '../../global/js/utils/story-helper';
+import { CodesandboxLink } from '../../global/js/utils/story-helper';
 import { CoachmarkBeacon } from '.';
+import * as CoachmarkBeaconStories from './CoachmarkBeacon.stories';
 
 # CoachmarkBeacon
 
@@ -39,7 +37,7 @@ one of two states, animated or active.
 
 <Canvas className="coachmarkExample" withSource="none">
   <div className="CoachmarkBaseExampleUsage">
-    <Story id={getStoryId(CoachmarkBeacon.displayName, 'coachmark-beacon')} />
+    <Story of={CoachmarkBeaconStories.coachmarkBeacon} />
   </div>
 </Canvas>
 
