--- a/packages/ibm-products/src/components/CoachmarkStack/CoachmarkStack.mdx
+++ b/packages/ibm-products/src/components/CoachmarkStack/CoachmarkStack.mdx
@@ -1,9 +1,7 @@
 import { Story, ArgsTable, Source, Canvas } from '@storybook/addon-docs';
-import {
-  getStoryId,
-  CodesandboxLink,
-} from '../../global/js/utils/story-helper';
+import { CodesandboxLink } from '../../global/js/utils/story-helper';
 import { CoachmarkStack } from '.';
+import * as CoachmarkStackStories from './CoachmarkStack.stories';
 
 # CoachmarkStack
 
@@ -46,7 +44,7 @@ _(See bottom right)_
 
 <Canvas>
   <div className="CoachmarkBaseExampleUsage">
-    <Story id={getStoryId(CoachmarkStack.displayName, 'coachmark-stack')} />
+    <Story of={CoachmarkStackStories.coachmarkStack} />
   </div>
 </Canvas>
 
