--- a/packages/ibm-products/src/components/FullPageError/FullPageError.mdx
+++ b/packages/ibm-products/src/components/FullPageError/FullPageError.mdx
@@ -1,9 +1,7 @@
 import { Story, ArgsTable, Source, Canvas } from '@storybook/addon-docs';
-import {
-  getStoryId,
-  CodesandboxLink,
-} from '../../global/js/utils/story-helper';
+import { CodesandboxLink } from '../../global/js/utils/story-helper';
 import { FullPageError } from '.';
+import * as stories from './FullPageError.stories';
 
 # FullPageError
 
@@ -33,7 +31,7 @@ The default error page can be used for full-page errors that are not 403 or 404
 errors, and not caused by server connectivity issues.
 
 <Canvas>
-  <Story id={getStoryId(FullPageError.displayName, 'full-page-error')} />
+  <Story of={stories.fullPageError} />
 </Canvas>
 
 ### 403 variant
@@ -42,7 +40,7 @@ Display an Access Denied (403) error message when the user lacks permission to
 access the page or data, or when login is required.
 
 <Canvas>
-  <Story id={getStoryId(FullPageError.displayName, 'full-page-error-403')} />
+  <Story of={stories.fullPageError403} />
 </Canvas>
 
 ### 404 variant
@@ -52,7 +50,7 @@ located on the server, typically due to outdated bookmarks, mistyped URLs, or
 broken links.
 
 <Canvas>
-  <Story id={getStoryId(FullPageError.displayName, 'full-page-error-404')} />
+  <Story of={stories.fullPageError404} />
 </Canvas>
 
 ## Code sample
