--- a/packages/ibm-products/src/components/InterstitialScreenView/InterstitialScreenView.mdx
+++ b/packages/ibm-products/src/components/InterstitialScreenView/InterstitialScreenView.mdx
@@ -1,9 +1,7 @@
 import { Story, ArgsTable, Source, Canvas } from '@storybook/addon-docs';
-import {
-  getStoryId,
-  CodesandboxLink,
-} from '../../global/js/utils/story-helper';
+import { CodesandboxLink } from '../../global/js/utils/story-helper';
 import { InterstitialScreenView } from '.';
+import * as stories from './InterstitialScreenView.stories';
 
 # InterstitialScreenView
 
@@ -32,12 +30,7 @@ explain, educate, and cultivate novice users into high-functioning power users.
 ## Example usage
 
 <Canvas>
-  <Story
-    id={getStoryId(
-      InterstitialScreenView.displayName,
-      'interstitial-screen-view'
-    )}
-  />
+  <Story of={stories.interstitialScreenView} />
 </Canvas>
 
 ## Code sample
