--- a/packages/ibm-products/src/components/NotificationsPanel/NotificationsPanel.mdx
+++ b/packages/ibm-products/src/components/NotificationsPanel/NotificationsPanel.mdx
@@ -1,9 +1,7 @@
 import { Story, ArgsTable, Canvas } from '@storybook/addon-docs';
-import {
-  getStoryId,
-  CodesandboxLink,
-} from '../../global/js/utils/story-helper';
+import { CodesandboxLink } from '../../global/js/utils/story-helper';
 import { NotificationsPanel } from '.';
+import * as stories from './NotificationsPanel.stories';
 
 # NotificationsPanel
 
@@ -21,7 +19,7 @@ and interact with them all in one place.
 See notification bell in global header above for interaction.
 
 <Canvas>
-  <Story id={getStoryId(NotificationsPanel.displayName, 'default')} />
+  <Story of={stories.Default} />
 </Canvas>
 
 ## Code sample
