--- a/packages/ibm-products/src/components/Tearsheet/Tearsheet.mdx
+++ b/packages/ibm-products/src/components/Tearsheet/Tearsheet.mdx
@@ -1,9 +1,8 @@
 import { Story, ArgsTable, Source, Canvas } from '@storybook/addon-docs';
-import {
-  getStoryId,
-  CodesandboxLink,
-} from '../../global/js/utils/story-helper';
+import { CodesandboxLink } from '../../global/js/utils/story-helper';
 import { Tearsheet, TearsheetNarrow } from '.';
+import * as TearsheetStories from './Tearsheet.stories';
+import * as TearsheetNarrowStories from './Tearsheet.stories';
 import AnatomyImg from './_story-assets/tearsheet-anatomy.png';
 
 # Tearsheet and TearsheetNarrow
@@ -43,13 +42,13 @@ Tearsheets may be stacked up to 3 levels deep.
 ### Wide tearsheet
 
 <Canvas>
-  <Story id={getStoryId(Tearsheet.displayName, 'with-navigation')} />
+  <Story of={TearsheetStories.withNavigation} />
 </Canvas>
 
 ### Narrow tearsheet
 
 <Canvas>
-  <Story id={getStoryId(TearsheetNarrow.displayName, 'fully-loaded')} />
+  <Story of={TearsheetNarrowStories.fullyLoaded} />
 </Canvas>
 
 ## Code sample
