--- a/packages/ibm-products/src/components/StatusIndicator/StatusIndicator.mdx
+++ b/packages/ibm-products/src/components/StatusIndicator/StatusIndicator.mdx
@@ -1,9 +1,7 @@
 import { Story, ArgsTable, Source, Canvas } from '@storybook/addon-docs';
-import {
-  getStoryId,
-  CodesandboxLink,
-} from '../../global/js/utils/story-helper';
+import { CodesandboxLink } from '../../global/js/utils/story-helper';
 import { StatusIndicator } from '.';
+import * as StatusIndicatorStories from './StatusIndicator.stories';
 
 # StatusIndicator
 
@@ -17,7 +15,7 @@ import { StatusIndicator } from '.';
 {/* TODO: One example per designed use case. */}
 
 <Canvas>
-  <Story id={getStoryId(StatusIndicator.displayName, 'status-indicator')} />
+  <Story of={StatusIndicatorStories.statusIndicator} />
 </Canvas>
 
 ## Component API
