--- a/packages/ibm-products/src/components/StatusIndicator/StatusIndicatorStep.mdx
+++ b/packages/ibm-products/src/components/StatusIndicator/StatusIndicatorStep.mdx
@@ -1,9 +1,7 @@
 import { Story, ArgsTable, Source, Canvas } from '@storybook/addon-docs';
-import {
-  getStoryId,
-  CodesandboxLink,
-} from '../../global/js/utils/story-helper';
+import { CodesandboxLink } from '../../global/js/utils/story-helper';
 import { StatusIndicatorStep } from '.';
+import * as StatusIndicatorStepStories from './StatusIndicatorStep.stories';
 
 # StatusIndicatorStep
 
@@ -18,7 +16,7 @@ import { StatusIndicatorStep } from '.';
 
 <Canvas>
   <Story
-    id={getStoryId(StatusIndicatorStep.displayName, 'status-indicator-step')}
+    of={StatusIndicatorStepStories.statusIndicatorStep}
   />
 </Canvas>
 
