--- a/packages/ibm-products/src/components/DecoratorLink/DecoratorLink.mdx
+++ b/packages/ibm-products/src/components/DecoratorLink/DecoratorLink.mdx
@@ -3,10 +3,10 @@ import {
   getStoryId,
   CodesandboxLink,
 } from '../../global/js/utils/story-helper';
-import { Decorator } from '.';
-import * as DecoratorStories from './Decorator.stories';
+import { DecoratorLink } from '.';
+import * as DecoratorLinkStories from './DecoratorLink.stories';
 
-# Decorator
+# DecoratorLink
 
 ## Table of Contents
 
@@ -17,13 +17,12 @@ import * as DecoratorStories from './Decorator.stories';
 
 ## Overview
 
-The Decorator groups a key/value pair as a single element. This component is not
-interactive.
+The DecoratorLink groups a key/value pair to look and behave like a single link.
 
 ## Example usage
 
 <Canvas>
-  <Story of={DecoratorStories.Default} />
+  <Story of={DecoratorLinkStories.Default} />
 </Canvas>
 
 ## Example **setLabelTitle()**
