--- a/packages/ibm-products/src/components/DecoratorSingleButton/DecoratorSingleButton.mdx
+++ b/packages/ibm-products/src/components/DecoratorSingleButton/DecoratorSingleButton.mdx
@@ -3,10 +3,10 @@ import {
   getStoryId,
   CodesandboxLink,
 } from '../../global/js/utils/story-helper';
-import { Decorator } from '.';
-import * as DecoratorStories from './Decorator.stories';
+import { DecoratorSingleButton } from '.';
+import * as DecoratorSingleButtonStories from './DecoratorSingleButton.stories';
 
-# Decorator
+# DecoratorSingleButton
 
 ## Table of Contents
 
@@ -17,13 +17,13 @@ import * as DecoratorStories from './Decorator.stories';
 
 ## Overview
 
-The Decorator groups a key/value pair as a single element. This component is not
-interactive.
+The DecoratorSingleButton groups a key/value pair to look and behave like a
+single button.
 
 ## Example usage
 
 <Canvas>
-  <Story of={DecoratorStories.Default} />
+  <Story of={DecoratorSingleButtonStories.Default} />
 </Canvas>
 
 ## Example **setLabelTitle()**
