--- a/packages/ibm-products/src/components/DecoratorDualButton/DecoratorDualButton.mdx
+++ b/packages/ibm-products/src/components/DecoratorDualButton/DecoratorDualButton.mdx
@@ -3,10 +3,10 @@ import {
   getStoryId,
   CodesandboxLink,
 } from '../../global/js/utils/story-helper';
-import { Decorator } from '.';
-import * as DecoratorStories from './Decorator.stories';
+import { DecoratorDualButton } from '.';
+import * as DecoratorDualButtonStories from './DecoratorDualButton.stories';
 
-# Decorator
+# DecoratorDualButton
 
 ## Table of Contents
 
@@ -17,13 +17,13 @@ import * as DecoratorStories from './Decorator.stories';
 
 ## Overview
 
-The Decorator groups a key/value pair as a single element. This component is not
-interactive.
+The DecoratorDualButton groups a key/value pair where the key and value are each
+buttons.
 
 ## Example usage
 
 <Canvas>
-  <Story of={DecoratorStories.Default} />
+  <Story of={DecoratorDualButtonStories.Default} />
 </Canvas>
 
 ## Example **setLabelTitle()**
