chore(tagoverflow): prettier

--- a/packages/ibm-products/src/components/TagOverflow/TagOverflow.mdx
+++ b/packages/ibm-products/src/components/TagOverflow/TagOverflow.mdx
@@ -1,7 +1,5 @@
 import { Story, ArgsTable, Source, Canvas } from '@storybook/addon-docs';
-import {
-  CodesandboxLink
-} from '../../global/js/utils/story-helper';
+import { CodesandboxLink } from '../../global/js/utils/story-helper';
 import { TagOverflow } from '.';
 import * as TagOverflowStories from './TagOverflow.stories';
 
@@ -20,6 +18,7 @@ import * as TagOverflowStories from './TagOverflow.stories';
 ## Example usage
 
 {/* TODO: One example per designed use case. */}
+
 ### Tags
 
 <Canvas>
