--- a/packages/ibm-products/src/components/FilterPanel/FilterPanelCheckbox/FilterPanelCheckbox.mdx
+++ b/packages/ibm-products/src/components/FilterPanel/FilterPanelCheckbox/FilterPanelCheckbox.mdx
@@ -1,8 +1,5 @@
 import { Story, ArgsTable, Source, Canvas } from '@storybook/addon-docs';
-import {
-  getStoryId,
-  CodesandboxLink,
-} from '../../../global/js/utils/story-helper';
+import { CodesandboxLink } from '../../../global/js/utils/story-helper';
 import { FilterPanelCheckbox } from '.';
 import * as FilterPanelCheckboxStories from './FilterPanelCheckbox.stories';
 
@@ -15,8 +12,6 @@ import * as FilterPanelCheckboxStories from './FilterPanelCheckbox.stories';
 - [Component API](#component-api)
 
 ## Example usage
-
-{/* TODO: One example per designed use case. */}
 
 <Canvas>
   <Story of={FilterPanelCheckboxStories.Default} />
