--- a/packages/ibm-products/src/components/FilterPanel/FilterPanelLabel/FilterPanelLabel.mdx
+++ b/packages/ibm-products/src/components/FilterPanel/FilterPanelLabel/FilterPanelLabel.mdx
@@ -1,8 +1,5 @@
 import { Story, ArgsTable, Source, Canvas } from '@storybook/addon-docs';
-import {
-  getStoryId,
-  CodesandboxLink,
-} from '../../../global/js/utils/story-helper';
+import { CodesandboxLink } from '../../../global/js/utils/story-helper';
 import { FilterPanelLabel } from '.';
 import * as FilterPanelLabelStories from './FilterPanelLabel.stories';
 
