--- a/packages/ibm-products/src/components/FilterPanel/FilterPanelLabel/FilterPanelLabel.mdx
+++ b/packages/ibm-products/src/components/FilterPanel/FilterPanelLabel/FilterPanelLabel.mdx
@@ -13,7 +13,7 @@ import * as FilterPanelLabelStories from './FilterPanelLabel.stories';
 
 ## Overview
 
-_**The FilterPanelLabel is for internal use only by the FilterPanel.**_
+`FilterPanelLabel` _**is for internal use only by the FilterPanel.**_
 
 <Canvas>
   <Story of={FilterPanelLabelStories.Default} />
