chore(ActionBar): Move ActionBar to canary

--- a/docs/guides/v2.md
+++ b/docs/guides/v2.md
@@ -108,6 +108,11 @@ v1 and v2 will both receive weekly releases occurring every Tuesday morning.
 
 - `pictogram` can now be either a function or object.
 
+### IconButtonBar
+
+- The IconButtonBar is removed in V2 as the existing ActionBar is a viable
+  replacement.
+
 ### InlineEdit
 
 - Renamed to `EditInPlace` v1 and v2 properties removed.
