fix: syntax error in drag and drop mdx

--- a/packages/ibm-products/src/components/DragAndDrop/DragAndDrop.mdx
+++ b/packages/ibm-products/src/components/DragAndDrop/DragAndDrop.mdx
@@ -20,10 +20,10 @@ customizing the order of columns in the Datagrid.
 
 {/* We do provide styles for some of the drag states as detailed below. */}
 
-| {/\*                   | State                                     | class |
+{/* |                        | State                                     | class |
 | ---------------------- | ----------------------------------------- | ----- |
 | Default draggable item | `${pkg.prefix}__draggable-item`           |
-| Dragging               | `${pkg.prefix}__draggable-item--dragging` | \*/}  |
+| Dragging               | `${pkg.prefix}__draggable-item--dragging` |       | */}
 
 ## Example usage
 
