refactor: converts `CreateSidePanel` and `SidePanel` to typescript (#4471)
* refactor: converts CreateSidePanel and SidePanel to typescript

* refactor: add default props back

* fix: syntax error in drag and drop mdx

* docs(CreateSidePanel): update prop description

Co-authored-by: elysia <elysia.hwang@gmail.com>

* docs: update actions prop description

* fix: add conditionally required props back

---------

Co-authored-by: elysia <elysia.hwang@gmail.com>

--- a/packages/ibm-products/src/components/CoachmarkOverlayElement/CoachmarkOverlayElement.mdx
+++ b/packages/ibm-products/src/components/CoachmarkOverlayElement/CoachmarkOverlayElement.mdx
@@ -40,9 +40,7 @@ Coachmark/CoachmarkFixed/CoachmarkStack components.
 
 <Canvas className="coachmarkExample" withSource="none">
   <div className="CoachmarkBaseExampleUsage">
-    <Story
-      of={CoachmarkOverlayElementStories.coachmarkOverlayElement}
-    />
+    <Story of={CoachmarkOverlayElementStories.coachmarkOverlayElement} />
   </div>
 </Canvas>
 
