--- a/packages/ibm-products/src/components/CoachmarkOverlayElements/CoachmarkOverlayElements.mdx
+++ b/packages/ibm-products/src/components/CoachmarkOverlayElements/CoachmarkOverlayElements.mdx
@@ -41,9 +41,7 @@ CoachmarkStack components.
 
 <Canvas className="coachmarkExample" withSource="none">
   <div className="CoachmarkBaseExampleUsage">
-    <Story
-      of={CoachmarkOverlayElementsStories.coachmarkOverlayElements}
-    />
+    <Story of={CoachmarkOverlayElementsStories.coachmarkOverlayElements} />
   </div>
 </Canvas>
 
