--- a/packages/ibm-products/src/components/DataSpreadsheet/DataSpreadsheet.mdx
+++ b/packages/ibm-products/src/components/DataSpreadsheet/DataSpreadsheet.mdx
@@ -1,7 +1,7 @@
 import { Story, ArgsTable, Source, Canvas } from '@storybook/addon-docs';
 import { CodesandboxLink } from '../../global/js/utils/story-helper';
 import { DataSpreadsheet } from '.';
-import * as stories from './DataSpreadsheet.stories'
+import * as stories from './DataSpreadsheet.stories';
 
 # DataSpreadsheet
 
