--- a/packages/ibm-products/src/components/Datagrid/Datagrid.mdx
+++ b/packages/ibm-products/src/components/Datagrid/Datagrid.mdx
@@ -301,9 +301,7 @@ const App = () => {
 ```
 
 <Canvas>
-  <Story
-    of={ClickableRowStories.ClickableRowItemStory}
-  />
+  <Story of={ClickableRowStories.ClickableRowItemStory} />
 </Canvas>
 
 ## Inline editing
@@ -433,9 +431,7 @@ const App = () => {
 ```
 
 <Canvas>
-  <Story
-    of={EditableCellStories.EditableCellUsageStory}
-  />
+  <Story of={EditableCellStories.EditableCellUsageStory} />
 </Canvas>
 
 At this time, it is possible to still use the deprecated `useInlineEdit` hook
@@ -820,9 +816,7 @@ filterProps: {
 ```
 
 <Canvas>
-  <Story
-    of={FlyoutStories.FlyoutBatch}
-  />
+  <Story of={FlyoutStories.FlyoutBatch} />
 </Canvas>
 
 ## Auto size column to fit content
