--- a/packages/ibm-products/src/components/PageHeader/PageHeader.mdx
+++ b/packages/ibm-products/src/components/PageHeader/PageHeader.mdx
@@ -85,9 +85,7 @@ On occasion, a condensed page header is required. This version accommodates this
 by just displaying the breadcrumb bar only.
 
 <Canvas>
-  <Story
-    of={stories.withBreadcrumbActionsToolbarOnly}
-  />
+  <Story of={stories.withBreadcrumbActionsToolbarOnly} />
 </Canvas>
 
 ## Examples
