--- a/packages/ibm-products/src/components/StatusIndicator/StatusIndicatorStep.mdx
+++ b/packages/ibm-products/src/components/StatusIndicator/StatusIndicatorStep.mdx
@@ -15,9 +15,7 @@ import * as StatusIndicatorStepStories from './StatusIndicatorStep.stories';
 {/* TODO: One example per designed use case. */}
 
 <Canvas>
-  <Story
-    of={StatusIndicatorStepStories.statusIndicatorStep}
-  />
+  <Story of={StatusIndicatorStepStories.statusIndicatorStep} />
 </Canvas>
 
 ## Component API
