feat: filter panel, added accordion and group

--- a/packages/ibm-products/src/components/FilterPanel/FilterPanel.mdx
+++ b/packages/ibm-products/src/components/FilterPanel/FilterPanel.mdx
@@ -13,8 +13,7 @@ import * as FilterPanelStories from './FilterPanel.stories';
 
 ## Overview
 
-The `FilterPanel` allows for an optional title, and acts as the container for
-its subcomponents.
+The `FilterPanel` is the container for its subcomponents.
 
 ## Example usage
 
