--- a/packages/ibm-products/src/components/FilterPanel/FilterPanelAccordion/FilterPanelAccordion.mdx
+++ b/packages/ibm-products/src/components/FilterPanel/FilterPanelAccordion/FilterPanelAccordion.mdx
@@ -1,9 +1,9 @@
 import { Story, ArgsTable, Source, Canvas } from '@storybook/addon-docs';
 import { CodesandboxLink } from '../../../global/js/utils/story-helper';
-import { FilterPanelCheckbox } from '.';
-import * as FilterPanelCheckboxStories from './FilterPanelCheckbox.stories';
+import { FilterPanelAccordion } from '.';
+import * as FilterPanelAccordionStories from './FilterPanelAccordion.stories';
 
-# FilterPanelCheckbox
+# FilterPanelAccordion
 
 ## Table of Contents
 
@@ -13,13 +13,13 @@ import * as FilterPanelCheckboxStories from './FilterPanelCheckbox.stories';
 
 ## Overview
 
-The `FilterPanelCheckbox` is a modified Carbon `Checkbox` and accepts both a
-label and a count.
+The `FilterPanelAccordion` is a container required for grouping
+`FilterPanelAccordionItems` with a label and optional count.
 
 ## Example usage
 
 <Canvas>
-  <Story of={FilterPanelCheckboxStories.Default} />
+  <Story of={FilterPanelAccordionStories.Default} />
 </Canvas>
 
 ## Component API
