--- a/packages/ibm-products/src/components/ScrollGradient/ScrollGradient.mdx
+++ b/packages/ibm-products/src/components/ScrollGradient/ScrollGradient.mdx
@@ -1,9 +1,8 @@
-import { Story, ArgsTable, Source, Canvas } from '@storybook/addon-docs';
-import {
-  getStoryId,
-  CodesandboxLink,
-} from '../../global/js/utils/story-helper';
+import { Story, ArgsTable, Source, Canvas, Meta } from '@storybook/addon-docs';
 import { ScrollGradient } from '.';
+import * as ScrollGradientStories from './ScrollGradient.stories';
+
+<Meta title="ScrollGradient" component={ScrollGradient} />
 
 # ScrollGradient
 
@@ -22,9 +21,7 @@ more content that can be scrolled to.
 ## Example usage
 
 <Canvas>
-  <Story
-    id={getStoryId(ScrollGradient.displayName, 'scroll-gradient-vertical')}
-  />
+  <Story of={ScrollGradientStories.scrollGradientVertical} />
 </Canvas>
 
 ## Code sample
