fix: new search and updates

--- a/packages/ibm-products/src/components/FilterPanel/FilterPanelCheckboxWithOverflow/FilterPanelCheckboxWithOverflow.mdx
+++ b/packages/ibm-products/src/components/FilterPanel/FilterPanelCheckboxWithOverflow/FilterPanelCheckboxWithOverflow.mdx
@@ -11,6 +11,11 @@ import * as FilterPanelCheckboxWithOverflowStories from './FilterPanelCheckboxWi
 - [Example usage](#example-usage)
 - [Component API](#component-api)
 
+## Overview
+
+The `FilterPanelCheckboxWithOverflow` is like `FilterPanelCheckbox`, but
+provides access to an overflow menu with more options on hover.
+
 ## Example usage
 
 <Canvas>
