--- a/packages/ibm-products/src/components/TagOverflow/TagOverflow.mdx
+++ b/packages/ibm-products/src/components/TagOverflow/TagOverflow.mdx
@@ -9,15 +9,23 @@ import * as TagOverflowStories from './TagOverflow.stories';
 
 - [Overview](#overview)
 - [Example usage](#example-usage)
+- [Coded example](#coded-example)
 - [Component API](#component-api)
 
 ## Overview
 
-{/* TODO: Overview. */}
+A tag overflow is the use of an interactive tag with the addition of a toggletip
+to show additional content.
+
+The need to show additional items related to an object will occur in small
+spaces in the UI. A tag overflow count can be used with a group of tags when
+there is not enough space to show all tags related to an object. Clicking on the
+tag overflow presents a toggletip that lists up to 10 additional tags. If there
+are more than 10 additional tags, the toggletip also includes a link to view all
+tags. When the user clicks on this link, a modal opens with a list of all the
+tags associated with the object.
 
 ## Example usage
-
-{/* TODO: One example per designed use case. */}
 
 ### Tags
 
@@ -43,7 +51,7 @@ import * as TagOverflowStories from './TagOverflow.stories';
   <Story of={TagOverflowStories.CustomComponent} />
 </Canvas>
 
-## Code sample
+## Coded example
 
 <CodesandboxLink exampleDirectory="TagOverflow" />
 
