--- a/packages/ibm-products/src/components/DecoratorLink/DecoratorLink.mdx
+++ b/packages/ibm-products/src/components/DecoratorLink/DecoratorLink.mdx
@@ -1,3 +1,4 @@
+{/* cspell:ignore setlabeltitle */}
 import { Story, ArgsTable, Source, Canvas } from '@storybook/addon-docs';
 import {
   getStoryId,
