feat(TagOverflow): multiline support (#4618)
* feat(tagoverflow): generate default file structure for TagOverflow component

* chore(tagoverflow): update gallery to include example of tagoverflow component

* feat(tagoverflow): component functionality implementation

* fix(tagoverflow): too many re-renders

* fix(tagoverflow): container width updated to according to story definition

* fix(tagoverflow) : story title and id updated as per issue 4529

* test(tagoverflow) : initial unit tests

* chore(tagoverflow): prettier

* test(tagoverflow): added some more unit tests

* fix(tagoverflow): all tags are getting displayed for a second during initial load

* fix(tagoverflow): storybook config changes in accordance with issue 4561

* fix(tagoverflow): accessibility isssue elements with duplicate id exists

* fix(tagoverflow): merge conflict

* test(tagoverflow): some more unit tests

* feat(tagoverflow): multiline support

* fix(tagoverflow): typo, self closing tag and array length check

* fix(tagoverflow): spellcheck

* fix(tagoverflow): remove autogenerated comments

* fix(tagoverflow): change config for useravatar background color

* fix(tagoverflow): pass tagType added as a prop

* fix(tagoverflow): test case failure

* fix(tagoverflow): rename itemTemplate to tagComponent

* fix(tag-overflow): optimize custom template rendering logic

* fix(tagoverflow): remove logic for setting default tag type as blue

---------

Co-authored-by: Sinta Augustine <sinta.augustine@ibm.com>

--- a/packages/ibm-products/src/components/TagOverflow/TagOverflow.mdx
+++ b/packages/ibm-products/src/components/TagOverflow/TagOverflow.mdx
@@ -39,6 +39,12 @@ tags associated with the object.
   <Story of={TagOverflowStories.TagsWithTruncation} />
 </Canvas>
 
+### Multiline tags
+
+<Canvas>
+  <Story of={TagOverflowStories.MultilineTags} />
+</Canvas>
+
 ### UserAvatars
 
 <Canvas>
