fix(tagoverflow): update story names and use id as key instead of index

--- a/packages/ibm-products/src/components/TagOverflow/TagOverflow.mdx
+++ b/packages/ibm-products/src/components/TagOverflow/TagOverflow.mdx
@@ -27,13 +27,13 @@ tags associated with the object.
 
 ## Example usage
 
-### Tags
+### Tags with overflow count and overflow modal
 
 <Canvas>
-  <Story of={TagOverflowStories.ManyTags} />
+  <Story of={TagOverflowStories.TagsWithOverflowModal} />
 </Canvas>
 
-### Tags with truncation
+### Tags with truncation and overflow count
 
 <Canvas>
   <Story of={TagOverflowStories.TagsWithTruncation} />
@@ -45,16 +45,16 @@ tags associated with the object.
   <Story of={TagOverflowStories.MultilineTags} />
 </Canvas>
 
-### UserAvatars
+### UserAvatars with overflow count and overflow modal
 
 <Canvas>
-  <Story of={TagOverflowStories.ManyUserAvatars} />
+  <Story of={TagOverflowStories.UserAvatarsWithOverflowModal} />
 </Canvas>
 
-### Custom components
+### Custom components with overflow count and overflow modal
 
 <Canvas>
-  <Story of={TagOverflowStories.CustomComponent} />
+  <Story of={TagOverflowStories.CustomComponentsWithOverflowModal} />
 </Canvas>
 
 ## Coded example
